# mask4llm

./: Makefile  README.md  pyproject.toml
.github/workflows/: release-prod.yaml
src/mask4llm/: __init__.py  cli.py  main.py  session.py  tui.py  util.py
src/mask4llm/widgets/: copy_on_enter_log.py
tests/: test_main.py
