[project]
name = "mask4llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mask4llm = "mask4llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
