[project]
name = "mask4llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mask4llm = "mask4llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["E", "F", "I", "W"]
line-length = 79
lint.fixable = ["I"]
exclude = [".env", ".venv", "venv"]
output-format = "full"
