[project]
name = "mask4llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.9.0",
    "textual[syntax]>=3.7.1",
]

[project.scripts]
mask4llm = "mask4llm:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["E", "F", "I", "W"]
lint.fixable = ["I"]
line-length = 79
exclude = [".env", ".venv", "venv"]
output-format = "full"

[tool.pyright]
include = ["src"]
exclude = ["src/mask4llm/tui.py"] 
